Student home front end completed

--- a/SALWaitlist/WebContent/lib/styles/header.css
+++ b/SALWaitlist/WebContent/lib/styles/header.css
@@ -3,6 +3,11 @@
     src: url(../montserrat/Montserrat-Regular.otf);
 }
 
+@font-face {
+	font-family: Montserrat-Bold;
+	src: url(../montserrat/Montserrat-Bold.otf);
+}
+
 body {
     font-family: Montserrat-Regular;
     background-color: #FFFFCC;
@@ -15,7 +20,7 @@ header {
 }
 
 .header-el {
-    top: 28px;
+    top: 36px;
 }
 
 .header-img {
@@ -23,8 +28,8 @@ header {
 }
 
 #logo {
-	height: 110px;
-	width: 110px;
+	height: 100px;
+	width: 100px;
 }
 
 #logo:hover {
@@ -51,4 +56,14 @@ a:hover {
     text-decoration: none;
     color: #b4deff;
     transition: 0.5s;
+}
+
+.guest-btn {
+	border-radius: 1px;
+	background-color: #cfe2f3ff;
+}
+
+.guest-btn:hover {
+	background-color: rgb(128, 183, 231);
+	transition: 0.5s;
 }
