--- a/SALWaitlist/WebContent/lib/styles/student-home.css
+++ b/SALWaitlist/WebContent/lib/styles/student-home.css
@@ -39,3 +39,19 @@
     transition: 0.5s;
     cursor: pointer;
 }
+
+.container {
+	text-align: center;
+}
+
+.waittime-time {
+	font-size: 3em;
+	top: -35px;
+    position: relative;
+    z-index: -1;
+}
+
+#time {
+	font-size: 2.5em;
+	font-weight: bold;
+}
