Student home redesign

--- a/SALWaitlist/WebContent/lib/styles/header.css
+++ b/SALWaitlist/WebContent/lib/styles/header.css
@@ -8,6 +8,12 @@
 	src: url(../montserrat/Montserrat-Bold.otf);
 }
 
+/* Prevent horizontal scrolling */
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     font-family: Montserrat-Regular;
     background-color: #FFFFCC;
