Added sign out functionality and fixed ui issues on profile page

--- a/SALWaitlist/WebContent/lib/styles/profile.css
+++ b/SALWaitlist/WebContent/lib/styles/profile.css
@@ -92,3 +92,11 @@
 #submitButton:hover, .dropbtn:focus {
     background-color: #898989;
 }
+
+.container-fluid {
+    overflow: -webkit-paged-x;
+}
+
+.ms-parent {
+    width: 17% !important;
+}
