--- a/SALWaitlist/WebContent/lib/styles/profile.css
+++ b/SALWaitlist/WebContent/lib/styles/profile.css
@@ -1,11 +1,8 @@
 @charset "UTF-8";
-#profilePic {
-	padding-top:30px;
-    height: 150px;
-    width: 150px;
-    background-color: #bbb;
-    border-radius: 50%;
-    /* display: inline-block; */
+.img-circle{
+	height: 150px;
+	width: 150px;
+	border-radius:50%;
 }
 .prof{
 	width: 100%;
@@ -94,9 +91,9 @@
 }
 
 .container-fluid {
-    overflow: -webkit-paged-x;
+    height: 2000px;
 }
 
 .ms-parent {
-    width: 17% !important;
+    width: 21% !important;
 }
